[gd_scene load_steps=7 format=3 uid="uid://bihkek0x8kn1b"]

[ext_resource type="Script" uid="uid://u3gkvrafq4ca" path="res://ui/schedule.gd" id="1_ks8t7"]
[ext_resource type="Script" uid="uid://e8lnskipv38q" path="res://ui/kill_count.gd" id="1_vkava"]
[ext_resource type="Texture2D" uid="uid://cn26f0pg2f5y3" path="res://assets/skull.svg" id="1_wl5ax"]
[ext_resource type="Script" uid="uid://ix4gyu1403ll" path="res://ui/road_tool.gd" id="4_vkava"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl5ax"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vkava"]

[node name="UI" type="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_bottom = -122.0
grow_horizontal = 0
grow_vertical = 2

[node name="KillCount" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme_override_styles/panel = SubResource("StyleBoxFlat_wl5ax")
script = ExtResource("1_vkava")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/KillCount"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/KillCount/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource("1_wl5ax")
expand_mode = 2
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="KillsCount" type="Label" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Kills"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsNeeded" type="Label" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.42552748, 0.39283562, 0.46142203, 1)
theme_override_font_sizes/font_size = 12
text = "of x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageLabel" type="Label" parent="VBoxContainer/KillCount/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.42552748, 0.39283562, 0.46142203, 1)
theme_override_font_sizes/font_size = 14
text = "stage x of x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Schedule" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_vkava")
script = ExtResource("1_ks8t7")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Schedule"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayProgress" type="ProgressBar" parent="VBoxContainer/Schedule/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 23.37
fill_mode = 2
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Schedule/HBoxContainer/DayProgress"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="DayStart" type="Button" parent="VBoxContainer/Schedule/HBoxContainer/DayProgress/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Day"

[node name="RoadPanel" type="Panel" parent="."]
offset_left = 883.0
offset_top = 528.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="ToolBar" type="HBoxContainer" parent="RoadPanel"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="RoadPanel/ToolBar"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="RoadPanel/ToolBar/MarginContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Clear
All
Roads"

[node name="MarginContainer2" type="MarginContainer" parent="RoadPanel/ToolBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="RoadPanel/ToolBar/MarginContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Left-click to draw roads.
Right-click to destroy roads.
Left-click to pickup and drag to move buildings / objects."
vertical_alignment = 1
autowrap_mode = 3

[node name="RoadTool" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_vkava")

[connection signal="pressed" from="VBoxContainer/Schedule/HBoxContainer/DayProgress/MarginContainer/DayStart" to="VBoxContainer/Schedule" method="restart_day"]
[connection signal="pressed" from="RoadPanel/ToolBar/MarginContainer/Button" to="RoadTool" method="_on_clear_pressed"]
